--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -7,9 +7,3 @@
     margin: auto;
     box-shadow: 0px 4px 8px rgb(16, 16, 16);
 }
-.profile td{
-    width: unset;
-}
-.profile th{
-    width: unset;
-}
